# sndfile.rs

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
src/: format.rs  lib.rs  ndarray_support.rs  test.rs
src/test/: mod.rs  test_issue_1.rs  test_issue_3.rs
