[package]
name = "sndfile"
version = "0.0.1"
authors = ["tuxzz <tuku@tuxzz.org>"]
edition = "2018"
license = "MIT"

description = "A library for reading and writing audio files."
readme = "README.md"
documentation = "https://docs.rs/sndfile.rs"

repository = "https://github.com/Xeiron/sndfile.rs"
keywords = ["libsndfile", "sound", "audio", "encoding", "compression"]
categories = [ "multimedia", "multimedia::audio", "multimedia::encoding", "api-bindings", "compression" ]

[features]
default = []
ndarray_features = ["ndarray"]

[dependencies]
sndfile-sys = "0.2"
lazy_static = "1"
ndarray = { version = "0.13", optional = true }

[badges]
appveyor = { repository = "Xeiron/sndfile.rs" }
travis-ci = { repository = "Xeiron/sndfile.rs" }

is-it-maintained-issue-resolution = { repository = "Xeiron/sndfile.rs" }
is-it-maintained-open-issues = { repository = "Xeiron/sndfile.rs" }

maintenance = { status = "passively-maintained" }
